Release 0.9.7 (#15)
* Update tutorial: refine code comments in Part-3 for clarity and consistency.

* Update documentation: replace hardcoded Fluxtion version with a template variable and set version to 0.9.6 in configuration.

* Fix broken relative links in documentation and update Python & JDK configurations.

* Remove introductory documentation and refine platform-agnostic messaging for Fluxtion. Update tutorial with corrected Java specs and output example.

* Standardize section headers in tutorial-part-1 documentation for improved readability and consistency.

* Standardize section headers across tutorials for consistent formatting and readability.

* Add code block formatting and example outputs to tutorials for enhanced clarity and consistency.

* update examples to use fluxtion-builder 0.9.6 and add TutorialPart5

* Add tutorial-part-5 documentation with file I/O feed and sink examples, and update mkdocs navigation.

* Update documentation: adjust navigation titles, correct formatting inconsistencies, add badges to README, and set project JDK level to Java 21.

* Update documentation: add Javadoc links for Fluxtion-runtime and Fluxtion-builder in navigation.

* Expand documentation: add "Examples and how-to" section with practical examples, update MkDocs navigation, and include a new `examples.md` page.

* Update documentation: extend "Choosing Fluxtion" with comparison to alternative frameworks and clarify use cases.

* Update documentation: bump Fluxtion version in README to 0.9.6.

* Update documentation: improve code examples formatting, add console utility details, and refine README for clarity.

* Expand documentation: add "Console sink formatting" and "Troubleshooting" sections, update navigation, adjust Fluxtion runtime source link, and set project JDK to Java 21.

* Expand documentation: add "Console sink formatting" and "Troubleshooting" sections, update navigation, adjust Fluxtion runtime source link, and set project JDK to Java 21.

* Update docu