@@ -1,4 +1,5 @@
 # Tutorial Part‑4 — Package and embed in a microservice
+---
 
 In this tutorial you will:
 
@@ -6,27 +7,36 @@ In this tutorial you will:
 - Add basic logging, a health check endpoint, and simple metrics hooks.
 - Package and run it as a plain Java app.
 
-Prerequisites
+Source reference in examples repository: [TutorialPart4]({{fluxtion_example_src}}/getting-started/src/main/java/com/telamin/fluxtion/example/tutorial/TutorialPart4.java)
+
+## Prerequisites
 
 - JDK 21+
 - Maven (wrapper provided) or JBang for a quick run
 
-What we’ll build
+## What we’ll build
 
 - A simple service that receives synthetic events on a scheduler, computes a rolling metric, logs outputs, and exposes:
     - GET /health — reports ready
     - GET /metrics — returns a few counters in text
 
-Option A — Run with JBang (single file demo)
+## Option A — Run with JBang (single file demo)
 
-1) Create a file TutorialPart4.java with the code below.
-2) Run: jbang TutorialPart4.java
+1. Create a file TutorialPart4.java with the code below.
+
+```console
+vi TutorialPart4.java
+```
+2. Run with jBang
+
+```console 
+jbang TutorialPart4.java 
+```
 
 ```java
-//DEPS com.telamin.fluxtion:fluxtion-builder:0.9.4
+//DEPS com.telamin.fluxtion:fluxtion-builder:{{fluxtion_version}}
 //DEPS org.slf4j:slf4j-simple:2.0.16
-//COMPILE_OPTIONS -proc:full
-//JAVA 21
+//JAVA 25
 
 import com.sun.net.httpserver.HttpServer;
 import com.telamin.fluxtion.builder.DataFlowBuilder;
@@ -125,7 +135,7 @@ public class TutorialPart4 {
 }
 ```
 
-Option B — Maven project
+## Option B — Maven project
 
 - Add dependencies and a main class similar to the above. Recommended POM fragments:
 
@@ -134,13 +144,13 @@ Option B — Maven project
 <dependency>
     <groupId>com.telamin.fluxtion</groupId>
     <artifactId>fluxtion-builder</artifactId>
-    <version>0.9.4</version>
+    <version>{{fluxtion_version}}</version>
 </dependency>
 <dependency>
-<groupId>org.slf4j</groupId>
-<artifactId>slf4j-simple</artifactId>
-<version>2.0.16</version>
-<scope>runtime</scope>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-simple</artifactId>
+    <version>2.0.16</version>
+    <scope>runtime</scope>
 </dependency>
 ```
 
@@ -176,19 +186,63 @@ Option B — Maven project
 </build>
 ```
 
-How to verify
+## What you should see
 
-- Start the app and observe logs for avg latency and any high‑latency alerts.
-- Health check: curl -s localhost:8080/health
-- Metrics: curl -s localhost:8080/metrics
+- Print metrics and health check endpoints.
+- Console logs for avg latency and any high‑latency alerts
 
-Key ideas reinforced
+```console
+fluxtion-exmples % jbang TutorialPart4.java 
+[jbang] Resolving dependencies...
+[jbang]    com.telamin.fluxtion:fluxtion-builder:{{fluxtion_version}}
+[jbang]    org.slf4j:slf4j-simple:2.0.16
+[jbang] Dependencies resolved
+[jbang] Building jar for TutorialPart4.java...
+[main] INFO TutorialPart4 - Starting microservice with embedded DataFlow
+[main] INFO TutorialPart4 - HTTP server started on http://localhost:8080
+[main] INFO TutorialPart4 - Service running. Try: curl -s localhost:8080/health | jq, curl -s localhost:8080/metrics
+[pool-1-thread-1] INFO TutorialPart4 - avgLatency=270ms
+[pool-1-thread-1] WARN TutorialPart4 - ALERT: high avg latency 270ms
+```
+
+## How to verify
+
+Start a new terminal and try to query the service REST endpoints with curl:
+
+### Health check
+
+REST query:
+```console
+curl -s localhost:8080/health
+```
+
+REST response:
+```json
+{"status":"UP","time":"2025-09-27T08:46:25.798373Z"}
+```
+
+### Metrics: 
+
+
+REST query:
+```console
+curl -s localhost:8080/metrics
+```
+
+REST response:
+```console
+events_in 541
+alerts_out 104
+avg_latency_ms 276
+```
+
+## Key ideas reinforced
 
 - Fluxtion is an embeddable library: no external server required.
 - Sinks are a natural way to hook into logging and metrics.
 - Simple HTTP endpoints can be added with JDK HttpServer; use your framework of choice in real services.
 
-Where to next
+## Where to next
 
 - Explore interpreted vs compiled graphs in Concepts and architecture.
 - Add your own sinks for Prometheus, OpenTelemetry, or your logging framework.
